Parser/test_cases/bad/recoverblock.cl
class Test {
  foo:Test;
  bar(x:Int,y:Int):String { {if true then 4 fi; valid <- 1; INVALID;} };
};
